Abap mockup compiler for node.js
================================

Legend
------
* : fixed
! : changed
+ : added
- : removed

v1.0.11, 2020-0?-??
------------------
! lowercase whole mock path (breaking!)
+ quiet operation param

v1.0.10, 2020-03-21
------------------
* CI improvements and npm audit fixes

v1.0.9, 2019-03-19
------------------
* update packages

v1.0.8, 2019-10-14
------------------
+ support "_exclude" sheet to remove specific excel sheets from processing

v1.0.7, 2019-07-15
------------------
* minor refactorings

v1.0.6, 2019-03-26
------------------
+ support comments at the beginning of the excel sheet

v1.0.4, 2018-12-25
------------------
+ support files with no _contents

v1.0.1, 2018-10-12
------------------
+ working code deployed