@@ -29,7 +29,7 @@ function findSheetsToSave(wb) {
         sheetsToSave = sheetsToSave.filter(i => !exclSet.has(i));
     }
 
-    return sheetsToSave;
+    return sheetsToSave.filter(sheet => !sheet.startsWith('-'));
 }
 
 function parseWorkbook(wb) {
