@@ -104,3 +104,52 @@ test('should skip excludes', () => {
     });
     expect(act.sheet1.__columns__).toEqual(['A', 'B']);
 });
+
+test('should skip sheets starting with -', () => {
+    const act = parseWorkbook({
+        SheetNames: ['Sheet1', 'Sheet2', '_exclude', '-Sheet3'],
+        Sheets: {
+            '_exclude': {
+                '!ref': 'A1:B2',
+                'A1': { 't': 's', 'v': 'Sheet', 'r': '<t>Sheet</t>', 'h': 'Sheet', 'w': 'Sheet' },
+                'B1': { 't': 's', 'v': 'comment', 'r': '<t>comment</t>', 'h': 'comment',   'w': 'comment' },
+                'A2': { 't': 's', 'v': 'Sheet2', 'r': '<t>Sheet2</t>', 'h': 'Sheet2', 'w': 'Sheet2' },
+                'B2': { 't': 's', 'v': 'X', 'r': '<t>X</t>', 'h': 'X', 'w': 'X' },
+            },
+            'Sheet1': {
+                '!ref': 'A1:B3',
+                'A1': { 't': 's', 'v': 'A',     'r': '<t>A</t>', 'h': 'A', 'w': 'A' },
+                'A2': { 't': 's', 'v': 'Vasya', 'r': '<t>Vasya</t>', 'h': 'Vasya', 'w': 'Vasya' },
+                'A3': { 't': 's', 'v': 'Petya', 'r': '<t>Petya</t>', 'h': 'Petya', 'w': 'Petya' },
+                'B1': { 't': 's', 'v': 'B',     'r': '<t>B</t>', 'h': 'B', 'w': 'B' },
+                'B2': { 't': 'n', 'v': 43344,   'w': '9/1/18' },
+                'B3': { 't': 'n', 'v': 43345,   'w': '9/2/18' },
+            },
+            'Sheet2': {
+                '!ref': 'A1:B3',
+                'A1': { 't': 's', 'v': 'A',     'r': '<t>A</t>', 'h': 'A', 'w': 'A' },
+                'A2': { 't': 's', 'v': 'Vasya', 'r': '<t>Vasya</t>', 'h': 'Vasya', 'w': 'Vasya' },
+                'A3': { 't': 's', 'v': 'Petya', 'r': '<t>Petya</t>', 'h': 'Petya', 'w': 'Petya' },
+                'B1': { 't': 's', 'v': 'B',     'r': '<t>B</t>', 'h': 'B', 'w': 'B' },
+                'B2': { 't': 'n', 'v': 43344,   'w': '9/1/18' },
+                'B3': { 't': 'n', 'v': 43345,   'w': '9/2/18' },
+            },
+            '-Sheet3': {
+                '!ref': 'A1:B3',
+                'A1': { 't': 's', 'v': 'A',     'r': '<t>A</t>', 'h': 'A', 'w': 'A' },
+                'A2': { 't': 's', 'v': 'Vasya', 'r': '<t>Vasya</t>', 'h': 'Vasya', 'w': 'Vasya' },
+                'A3': { 't': 's', 'v': 'Petya', 'r': '<t>Petya</t>', 'h': 'Petya', 'w': 'Petya' },
+                'B1': { 't': 's', 'v': 'B',     'r': '<t>B</t>', 'h': 'B', 'w': 'B' },
+                'B2': { 't': 'n', 'v': 43344,   'w': '9/1/18' },
+                'B3': { 't': 'n', 'v': 43345,   'w': '9/2/18' },
+            }
+        },
+    });
+    expect(act).toEqual({
+        sheet1: [
+            { A: 'Vasya', B: '01.09.2018' },
+            { A: 'Petya', B: '02.09.2018' },
+        ],
+    });
+    expect(act.sheet1.__columns__).toEqual(['A', 'B']);
+});
