@@ -12,6 +12,7 @@ v1.0.11, 2020-0?-??
 ------------------
 ! lowercase whole mock path (breaking!)
 + quiet operation param
++ ignore sheets starting from '-'
 
 v1.0.10, 2020-03-21
 ------------------
